@@ -5,6 +5,11 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - Merge in 64-bit int capability
 - Remove offset memory model, PAGE, HIMEM and indirection operators now
   use actual memory locations.
+- Text-mode builds available for Windows with Cygwin build environment.
+- Change to Escape handling (thanks Jonathan Harston), bringing it more in
+  line with the way the Acorn MOS handles it.
+- Separate out memory information from *HELP BASIC (in Debug mode) to
+  *HELP MEMINFO (available on any build).
 
 * V1.22.1
 - Make the old BASIC I-IV compatible integer mathematics available via a
